<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/user_green"
        android:title="@string/user_green"
        app:showAsAction="always"/>

    <item android:id="@+id/user_blue"
        android:title="@string/user_blue"
        app:showAsAction="always"/>

    <item android:id="@+id/user_purple"
        android:title="@string/user_purple"
        app:showAsAction="always"/>

    <item android:id="@+id/action_D4"
        android:title="@string/action_d4"
        app:showAsAction="never"/>

    <item android:id="@+id/action_D6"
        android:title="@string/action_d6"
        app:showAsAction="never"/>

    <item android:id="@+id/action_D8"
        android:title="@string/action_d8"
        app:showAsAction="never"/>

    <item android:id="@+id/action_D10"
        android:title="@string/action_d10"
        app:showAsAction="never"/>

    <item android:id="@+id/action_D12"
        android:title="@string/action_d12"
        app:showAsAction="never"/>

    <item android:id="@+id/action_D20"
        android:title="@string/action_d20"
        app:showAsAction="never"/>

</menu>